--- a/war/Forum.html
+++ b/war/Forum.html
@@ -19,6 +19,8 @@
   </head>
 
   <body>
+  <center><img src="images/ForumBanner.png" /></center>
+  
 	<div>
       <!-- OPTIONAL: include this if you want history support -->
       <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
@@ -30,6 +32,8 @@
           in order for this application to display correctly.
         </div>
       </noscript>
+
+      <h1>Forum</h1>
 
       <div id="main"></div>
     </div>
