fixed some basic gui

--- a/war/Forum.html
+++ b/war/Forum.html
@@ -18,9 +18,8 @@
     <script type="text/javascript" language="javascript" src="forum/forum.nocache.js"></script>
   </head>
 
-  <body>
-  <center><img src="images/ForumBanner.png" /></center>
-  
+  <body bgcolor="#ffff00">
+ 
 	<div>
       <!-- OPTIONAL: include this if you want history support -->
       <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
@@ -32,8 +31,6 @@
           in order for this application to display correctly.
         </div>
       </noscript>
-
-      <h1>Forum</h1>
 
       <div id="main"></div>
     </div>
